# ndr-lab-portfolio

./: .gitignore  PORTFOLIO.md  README.md
dashboard/: README.md  config.example.json  pyproject.toml
dashboard/dashboard_server/: __init__.py  alerting.py  app.py  models.py  store.py
dashboard/scripts/: run_server.sh  send_demo_events.py
dashboard/static/: app.js  index.html  styles.css
dashboard/systemd/: ndr-dashboard.service
dashboard/tests/: test_alerting.py  test_models.py  test_store.py
docs/: vm-lab-overview.md
lab-services/app-db-server/: README.md  config.example.json
lab-services/ubuntu-workload-client/: README.md  config.app-db-only.example.json  config.example.json  pyproject.toml
lab-services/ubuntu-workload-client/scripts/: install_client.sh  run_loop.sh  run_once.sh
lab-services/ubuntu-workload-client/systemd/: ubuntu-workload-client.service
lab-services/ubuntu-workload-client/traffic_client/: __init__.py  main.py
model/: README-source.md  README.md
model/artifacts/: README.md
model/configs/: ctu13_conversion_config.json  data_sufficiency_config.json  dataset_mapping.json  feature_schema.json  gru_config.yaml  (+5 more)
reports/: README.md  combined_10_attack_type_detection_metrics.csv  combined_10_model_comparison.md  combined_10_normal_scenario_false_positive_metrics.csv  final_model_comparison.md  gru_xgb_cross_analysis_report.md  low_slow_feature_evaluation_report.md  xgboost_metrics_combined_10_ndr.md
runtime/: README.md  augment_low_slow_features.py  convert_zeek_conn_to_common.py  profile_public_datasets.py  requirements.txt
(+47 files in other folders)
